add sidecar token manager
